alignment fixes

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -1344,4 +1344,6 @@ span.unu, span.doi, span.trei {
 .articles {
   background-color: #099DB0;
 }
-
+.align-with-title {
+  margin-top: -8px;
+}
